--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "private": true,
   "scripts": {
-    "build": "pwa export --routes /about,/blog,/",
+    "build": "pwa export",
     "start": "sirv build -s",
     "watch": "pwa watch"
   },
   "dependencies": {
     "ganalytics": "^3.0.0",
-    "navaid": "^1.0.0",
-    "sirv-cli": "^0.4.0"
+    "sirv-cli": "^0.4.0",
+    "timer-machine": "^1.1.0",
+    "tiny-timer": "^1.4.0"
   },
   "devDependencies": {
     "@pwa/cli": "latest",
