--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@pwa/cli": "latest",
     "@pwa/preset-svelte": "latest",
     "node-sass": "^4.9.0",
+    "postcss-focus-visible": "^4.0.0",
     "sass-loader": "^7.1.0",
     "svelte": "^3.1.0"
   },
