--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "watch": "pwa watch"
   },
   "dependencies": {
+    "focus-visible": "^5.0.2",
     "ganalytics": "^3.0.0",
     "sirv-cli": "^0.4.0",
     "timer-machine": "^1.1.0",
