--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
   "dependencies": {
     "focus-visible": "^5.0.2",
     "ganalytics": "^3.0.0",
-    "sirv-cli": "^0.4.0",
-    "timer-machine": "^1.1.0",
-    "tiny-timer": "^1.4.0"
+    "sirv-cli": "^0.4.0"
   },
   "devDependencies": {
     "@pwa/cli": "latest",
