--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
     "not ie_mob 11",
     "not ie 11",
     "not dead"
-  ]
+  ],
+  "engines": {
+    "node": "12.13.*",
+    "npm": "6.12.*"
+  }
 }
