--- a/src/assets/manifest.json
+++ b/src/assets/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "PWA/CLI",
-  "short_name": "PWA/CLI",
+  "name": "Morem - More Meditation",
+  "short_name": "Morem",
   "background_color": "#3E82F7",
   "orientation": "portrait",
   "theme_color": "#1e88e5",
