--- a/src/assets/manifest.json
+++ b/src/assets/manifest.json
@@ -4,7 +4,7 @@
   "background_color": "#3E82F7",
   "orientation": "portrait",
   "theme_color": "#1e88e5",
-  "display": "standalone",
+  "display": "fullscreen",
   "start_url": "/",
   "icons": [{
     "src": "/assets/icon.png",
