--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "focus-visible": "^5.0.2",
     "ganalytics": "^3.0.0",
+    "nosleep.js": "^0.9.0",
     "sirv-cli": "^0.4.0"
   },
   "devDependencies": {
